Changelog since cleanup-branch of 31.01.2020


changelog of master-branch:
    - added new event: "stage:blockitemfactory:finish"
    - cleaned up base classes for block and item
    - chunk entries containing positions are mostly stored relative to the chunk decreasing save file size


changelog of snapshot 20w12b [released on 21.03.2020]
    - added dimension definition for nether and end
    - removed deprecated loading phases
    - removed features.py as it was outdated
    - world is now saved when window is closed (only when in the state)
    - added mycelium block, podzol block, barrier block
    - added barrier item
    - .lang files can now be also loaded
    - added support for uv rotation in element of block-models
    - BlockFactory accepts now also an state-str like in block-state-files in setDefaultModelState

    fixed bugs:
        - Chunk.add_block did NOT accept the non-prefixed block-names like "stone"
        - icon for half hunger was not rendered correctly
        - BlockItemFactory failed to load block-items when not rebuilding for new blocks since last rebuild. This occur
            only in first run due to missing _finish call of ItemFactory-instances
        - rotation of BlockModels was not working
        - multipart models failed to load when an entry had an list of models


changelog of snapshot 20w12a [released on 16.03.2020]
    - added class for LootTable, added sub-classes for generating the content
    - added base classes for loot table function and conditions
    - added loading phase for adding loot tables
    - added drops to blocks
    - added option to chest to load loot table into the inventory
    - added starter chest
    - added /loot command
    - added loader for OpenGL-only scripts (stored in .gl files, loader under rendering/OpenGLSetupFile.py)

    fixed bugs:
        - rendering of multi-part models with OR condition fails due to wrong condition check
        - rendering of some blocks failed