@@ -28,7 +28,7 @@ class Slot:
 
     def __init__(self, itemstack=None, position=(0, 0), allow_player_remove=True, allow_player_insert=True,
                  allow_player_add_to_free_place=True, on_update=None, allow_half_getting=True, on_shift_click=None,
-                 empty_image=None, allowed_item_tags=None, allowed_item_test=None):
+                 empty_image=None, allowed_item_tags=None, allowed_item_test=None, on_button_press=None):
         """
         creates an new slot
         :param itemstack: the itemstack to use
@@ -39,6 +39,7 @@ class Slot:
         :param on_update: called when the slot is updated
         :param allow_half_getting: can the player get only the half of the items out of the slot?
         :param on_shift_click: called when shift-clicked on the block
+        :param on_button_press: called when an button is pressed when hovering above the slot
         """
         self.__itemstack = itemstack if itemstack else gui.ItemStack.ItemStack.get_empty()
         self.position = position
@@ -61,6 +62,7 @@ class Slot:
         self.empty_image = pyglet.sprite.Sprite(empty_image) if empty_image else None
         self.allowed_item_tags = allowed_item_tags
         self.allowed_item_func = allowed_item_test
+        self.on_button_press = on_button_press
 
     def get_itemstack(self):
         return self.__itemstack
@@ -149,7 +151,8 @@ class Slot:
 
 class SlotCopy:
     def __init__(self, master, position=(0, 0), allow_player_remove=True, allow_player_insert=True,
-                 allow_player_add_to_free_place=True, on_update=None, allow_half_getting=True, on_shift_click=None):
+                 allow_player_add_to_free_place=True, on_update=None, allow_half_getting=True, on_shift_click=None,
+                 on_button_press=None):
         # todo: add empty image
         # todo: add options for item allowing
         self.master: Slot = master
@@ -167,6 +170,7 @@ class SlotCopy:
         self.allow_half_getting = allow_half_getting
         self.on_shift_click = on_shift_click
         self.amount_label = pyglet.text.Label(text=str(self.master.itemstack.amount), anchor_x="right")
+        self.on_button_press = on_button_press
 
     def get_allowed_item_tags(self):
         return self.master.allowed_item_tags
@@ -232,11 +236,12 @@ class SlotCopy:
 
 
 class SlotInfiniteStack(Slot):
-    def __init__(self, itemstack, position=(0, 0), allow_player_remove=True,
+    def __init__(self, itemstack, position=(0, 0), allow_player_remove=True, on_button_press=None,
                  allow_player_add_to_free_place=True, on_update=None, allow_half_getting=True, on_shift_click=None):
         super().__init__(itemstack=itemstack, position=position, allow_player_remove=allow_player_remove,
                          allow_player_insert=False, allow_player_add_to_free_place=allow_player_add_to_free_place,
-                         on_update=on_update, allow_half_getting=allow_half_getting, on_shift_click=on_shift_click)
+                         on_update=on_update, allow_half_getting=allow_half_getting, on_shift_click=on_shift_click,
+                         on_button_press=on_button_press)
         self.reference_stack = self.itemstack.copy()
 
     def set_itemstack(self, stack, update=True, player=False):
@@ -252,11 +257,12 @@ class SlotInfiniteStack(Slot):
 
 
 class SlotInfiniteStackExchangeable(Slot):
-    def __init__(self, itemstack, position=(0, 0), allow_player_remove=True,
+    def __init__(self, itemstack, position=(0, 0), allow_player_remove=True, on_button_press=None,
                  allow_player_add_to_free_place=True, on_update=None, allow_half_getting=True, on_shift_click=None):
         super().__init__(itemstack=itemstack, position=position, allow_player_remove=allow_player_remove,
                          allow_player_insert=True, allow_player_add_to_free_place=allow_player_add_to_free_place,
-                         on_update=on_update, allow_half_getting=allow_half_getting, on_shift_click=on_shift_click)
+                         on_update=on_update, allow_half_getting=allow_half_getting, on_shift_click=on_shift_click,
+                         on_button_press=on_button_press)
         self.reference_stack = self.itemstack.copy()
 
     def set_itemstack(self, stack, update=True, player=False):
